# TWClone

./: Dockerfile
master_server/: Makefile  README  TODO  data.xml  fred  master_server.dsp  master_server.dsw  master_server.plg  misc.c  misc_util.c  network.c  server.c  server.h  template.xml  tmp.txt  xmlout.c
newserver/: Makefile  Makefile.solaris  backend.c  client.c  common.h  config.data  final.tar  hashtable.h  interface.c  interface.h  listen.c  listen.h  msgqueue.h  parse.h  planet.c  player.c  portinfo.h  server.c  serveractions.c  ships.data  universe.h
newserver/newserver/: backend.h  console.h  listen.h  player.c  universe.h
source/: .cvsignore  .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  PROTOCOL  README  TODO  autoconf.h.in  baseconfig.c  baseconfig.data  bigbang.c  boxmuller.c  boxmuller.h  client.c  client.h  common.c  common.h  config.c  config.data  config.h  config.h.in  config.status  configure  configure.ac  configure.in  configure.scan  cvs2cl  gaussian.c  gaussian.h  gen  getopt.c  getopt.h  hashtable.c  maint.c  maint.h  mkinstalldirs  (+32 more)
source/newserver/: Makefile  backend.c  backend.h  console.c  listen.c  listen.h  player.c  player.h  server.c  universe.c
